record detail list overflow is now automatic. Improved datepicker shortcut options were added. Fixed readability of timeline x-axes labels. Added simple linear future projections.

--- a/css/m.less
+++ b/css/m.less
@@ -31,7 +31,7 @@
     }
     .record_list{
         max-height: 38vh;
-        overflow-y: scroll;  
+        overflow-y: auto;  
     }
   
     .record_list,.analysis-table{
